# RILO

./: .gitignore  CMakeLists.txt  ReadMe.md
config/: rilo_params.yaml
include/: common.h  common_reg.hpp  cregistration.hpp  data_reader.hpp  keyframe.hpp  lidar_proj.hpp  point_cloud.hpp  proj_lidar.hpp  viewer.h
src/: viewer.cpp
test/: test.cpp
